--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <script type="text/javascript" src="math.js"></script>
     <script type="text/javascript" src="Configuration.js"></script>
     <script type="text/javascript" src="ColorGenerator.js"></script>
+    <script type="text/javascript" src="Circle.js"></script>
     <script type="text/javascript" src="midgard.js"></script>
 
     <!--[if IE]>
