Add primitive for convex polygons

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="Configuration.js"></script>
     <script type="text/javascript" src="ColorGenerator.js"></script>
     <script type="text/javascript" src="Circle.js"></script>
+    <script type="text/javascript" src="ConvexPolygon.js"></script>
     <script type="text/javascript" src="midgard.js"></script>
 
     <!--[if IE]>
