--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,14 @@
     <script type="text/javascript" src="jquery.color-2.1.2.js"></script>
 
     <script type="text/javascript" src="webgl-utils.js"></script>
+    <script type="text/javascript" src="seedrandom.js"></script>
+
     <script type="text/javascript" src="math.js"></script>
     <script type="text/javascript" src="Configuration.js"></script>
     <script type="text/javascript" src="ColorGenerator.js"></script>
     <script type="text/javascript" src="Circle.js"></script>
     <script type="text/javascript" src="ConvexPolygon.js"></script>
+    <script type="text/javascript" src="Terrain.js"></script>
     <script type="text/javascript" src="midgard.js"></script>
 
     <!--[if IE]>
