--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="ColorGenerator.js"></script>
     <script type="text/javascript" src="Circle.js"></script>
     <script type="text/javascript" src="ConvexPolygon.js"></script>
+    <script type="text/javascript" src="PointGenerator.js"></script>
     <script type="text/javascript" src="Terrain.js"></script>
     <script type="text/javascript" src="midgard.js"></script>
 
