Add a little menu to configure and regenerate terrain

--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,11 @@
     <canvas id="gl-canvas">
         Oops ... your browser doesn't support HTML5's Canvas elements!
     </canvas>
-    <div id="message"></div>
+    <div id="menu">
+        <span id="message"></span>
+        <hr>
+        <span id="options"></span>
+    </div>
     <div id="debug">
         Normalised cursor coordinates:<br>
         x = <span id="xcoord"></span><br>
