--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
     <script type="text/javascript" src="jquery-2.1.0.js"></script>
     <script type="text/javascript" src="jquery.color-2.1.2.js"></script>
 
+    <script type="text/javascript" src="rhill-voronoi-core.js"></script>
+
     <script type="text/javascript" src="webgl-utils.js"></script>
     <script type="text/javascript" src="seedrandom.js"></script>
 
