Add primitive for rendering lines with thickness

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
     <script type="text/javascript" src="ColorGenerator.js"></script>
     <script type="text/javascript" src="Circle.js"></script>
     <script type="text/javascript" src="ConvexPolygon.js"></script>
+    <script type="text/javascript" src="Line.js"></script>
     <script type="text/javascript" src="PointGenerator.js"></script>
     <script type="text/javascript" src="Terrain.js"></script>
     <script type="text/javascript" src="midgard.js"></script>
