Add Simplex noise dependency

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 
     <script type="text/javascript" src="webgl-utils.js"></script>
     <script type="text/javascript" src="seedrandom.js"></script>
+    <script type="text/javascript" src="simplex-noise.js"></script>
 
     <script type="text/javascript" src="math.js"></script>
     <script type="text/javascript" src="Configuration.js"></script>
